--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "namaste-react",
   "version": "1.0.0",
   "description": "This is Namaste react repository",
-  "main": "App.js",
   "scripts": {
     "test": "jest"
   },
@@ -16,7 +15,12 @@
     "url": "https://github.com/clasher3531/Namaste-React/issues"
   },
   "homepage": "https://github.com/clasher3531/Namaste-React#readme",
+  "devDependencies": {
+    "parcel": "^2.12.0",
+    "process": "^0.11.10"
+  },
   "dependencies": {
-    "parcel": "^2.12.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
