--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
-  }
+  },
+  "browserslist": [
+      "last 2 version"
+  ]
 }
