--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1"
   },
   "browserslist": [
-      "last 2 version"
+    "last 2 version"
   ]
 }
